FEAT: Accounts Worker User Registration (#11)
* feat: use code generation for the services

* fix: AMQP boot framework

* feat: improve eventing

* feat: add project.json

* feat: updating auth system

* fix: auth routing key

* feat: adding all user domain types for user registered event

* fix: user events for auth

* refactor: renaming auth eventing
